# uci_phonotactic_calculator

./: .gitignore  MANIFEST.in  Makefile  Pipfile  README.md  manage.py  menu.py  menu_ui.py  mypy.ini  pyproject.toml  pytest.ini  release.ps1  release.sh  requirements.txt  test_manager.py  tests_updated.py
.deprecated/: manage.py  requirements.txt
.deprecated/media/default/: french.csv  polish_onsets.csv
.deprecated/media/uploads/: english_test_data_ehhqkK3.csv
.deprecated/media/uploads/engl_1747104957_595806/: english_test_data_ilzyaCs_scores.csv
.deprecated/webcalc/: cron.py  models.py  tests.py  urls.py  views.py
.deprecated/webcalc/migrations/: 0001_initial.py  0002_remove_defaultfile_short_desc.py  0003_defaultfile_short_desc.py  0004_uploadtrain_current_time_and_more.py  0005_alter_uploadtrain_current_time.py  0006_alter_uploadtrain_current_time.py  0007_alter_uploadtrain_current_time.py  0008_alter_uploadtrain_current_time.py
.deprecated/webcalc/templates/: base.html  media.html
.deprecated/webcalc_project/: settings.py
.github/workflows/: ci.yml
data/: corpus_descriptions.txt  english_bad_test_data.csv  english_bad_training_data.txt  english_cmu_freq.txt  english_test_small.csv  finnish.csv  needle_cleaned_training.txt  spanish_training_data_no_stress_high_freq.csv
data/sample_test_data/: albright_cleaned_test_data.csv  cleaned_polish_test_data.csv  english_test_data.csv  needle_test_data.csv  sample_informational_text.txt
data/unit_test_data/: test_phoneme_list.txt  unit_test_training_data.txt
media/: default_file_list.txt  outfile.csv  outfile_2022_04_27_042345.csv
media/default/: english_cmu_freq.txt  english_freq.csv  english_onsets.csv  english_training_data.txt  english_training_data_onlyA.txt  samoan.csv  small_cmu_frequencies.txt  turkish_training_data.csv
media/descriptions/: about.txt  corpus_descriptions.txt  home.txt
src/: Latest_Multifunction_Modeler.py  README.md  __init__.py  aggregate.py  boundary_modes_builtin.py  cli.py  cli_utils.py  config.py  constants.py  corpus.py  header.py  header_schema.py  header_utils.py  io_utils.py  main.py  model_configs.py  neighbourhood_builtin.py  ngram_calculator.py  ngram_calculator_multifunction3.py  ngram_models.py  output.cs  output.csv  probability.py  registries.py  score_utils.py  smoothing_builtin.py  types.py  utility.py  validate.py  variants.py
src/plugins/: __init__.py  base.py  bigram.py  core.py  mixins.py  neighbourhood.py  ngram_model.py  positional_bigram.py  positional_unigram.py  unigram.py
src/plugins/prob_transforms/: __init__.py  conditional.py  joint.py
src/plugins/strategies/: __init__.py  base.py  ngram.py  position.py
src/plugins/utils/: __init__.py  smoothing.py
src/rnn_src/: data_process.py  evaluate.py  main.py  model.py  training.py
src/uci_phonotactic_calculator/: __init__.py  aggregators_builtin.py  boundaries_builtin.py  boundary_modes_builtin.py  cli.py  cli_demo_data.py  cli_ext.py  cli_formatter.py  config.py  corpus.py  filter_aliases.py  header_schema.py  header_utils.py  main.py  neighbourhood_builtin.py  ngram_calculator.py  print_data_paths.py  probability.py  progress.py  registries.py  smoothing_builtin.py  utility.py  variants.py  weighting.py
src/uci_phonotactic_calculator/cli/: README.md  __init__.py  demo_data.py  extensions.py  formatter.py  legacy.py  main.py  parser.py  utils.py
src/uci_phonotactic_calculator/core/: README.md  __init__.py  config.py  corpus.py  filter_aliases.py  header_utils.py  probability.py  registries.py  variants.py
src/uci_phonotactic_calculator/data/sample_test_data/: daland-test-data.csv  scholes_cleaned_test_data.csv  spanish_test_data_no_stress.csv  (+1 more)
src/uci_phonotactic_calculator/models/: __init__.py  aggregate.py  aggregators.py  boundaries.py  boundary_modes.py  neighbourhood.py  smoothing.py  weighting.py
src/uci_phonotactic_calculator/plugins/: README.md  __init__.py  core.py  fallback.py  mixins.py  neighbourhood.py  ngram_model.py
src/uci_phonotactic_calculator/utils/: __init__.py  constants.py  print_data_paths.py  progress.py  progress_base.py  types.py  utility.py
src/uci_phonotactic_calculator/web/: __main__.py
static/css/: base.css  media.css
tests/: common_helpers.py  conftest.py  test_bigrams.py  test_helpers.py  test_ngram_model_combinations.py  test_plugin_contract.py  test_unigrams.py
tests/cli/: test_cli_integration.py
tests/core/: test_boundary_padding_explicit.py  test_plugin_contract.py  test_registered_things_smoke.py
tests/fixtures/: unit_training_data.txt
tests/integration/: __init__.py  test_ngram_calculator_integration.py
tests/models/: test_aggregate_explicit.py  test_aggregate_new_methods.py
tests/plugins/: test_all_plugins_contract.py  test_bigrams_explicit.py  test_neighbourhood.py  test_unigrams_explicit.py
tests/prob_transforms/: test_prob_transforms_explicit.py
tests/strategies/: test_position_explicit.py
tests/unit/: __init__.py  test_bigrams.py  test_bigrams_explicit.py  test_helpers.py  test_model_configs.py  test_neighbourhood.py  test_ngram_model_combinations.py  test_positional_bigrams.py  test_progress.py  test_score_utils.py  test_unigrams.py
tests/utils/: test_laplace_and_lse_explicit.py  test_smoothing_explicit.py  test_smoothing_kn_explicit.py
tools/: savecode.py
webcalc/: admin.py  apps.py  cron.py  models.py  test_updated.py  tests.py  tests.py.backup  tests_updated.py  urls.py  views.py
webcalc/migrations/: 0001_initial.py  0002_defaultfile.py  0002_remove_defaultfile_short_desc.py  0003_auto_20220424_1824.py  0003_defaultfile_short_desc.py  0004_auto_20220505_1211.py  0004_auto_20221109_0203.py  0004_uploadtrain_current_time_and_more.py  0005_alter_uploadtrain_current_time.py  0005_auto_20220507_2249.py  0006_alter_uploadtrain_current_time.py  0007_alter_uploadtrain_current_time.py  0008_alter_uploadtrain_current_time.py
webcalc/templates/: about.html  base.html  descriptions.html  home.html  media.html  mediaGrouped.html  output.html  uploadDefault.html
webcalc_project/: settings.py  urls.py  wsgi.py
(+42 files in other folders)
