[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uci-phonotactic-calculator"
version = "0.2.1"
description = "A toolkit for phonotactic probability calculation and analysis."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    # Add your runtime dependencies here, e.g., "numpy", "pandas"
]

[project.urls]
Homepage = "https://github.com/connormayer/uci_phonotactic_calculator"

[project.scripts]
ngram-calculator = "uci_phonotactic_calculator.main:main"
uci-phonotactic-calculator = "uci_phonotactic_calculator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include all CSV files in src and subpackages
"uci_phonotactic_calculator.data" = ["**/*.csv", "**/*.txt"]
