[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uci-phonotactic-calculator"
version = "0.2.2"
description = "A toolkit for phonotactic probability calculation and analysis."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "rich>=13.7",
    "numpy>=1.21",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
    "build>=0.10.0",
]
ui = [
    "gradio>=3.50.0",
]
web = [
    "django>=4.2.0",
    "django-crispy-forms>=2.0.0",
    "django-stubs>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/connormayer/uci_phonotactic_calculator"
Documentation = "https://github.com/connormayer/uci_phonotactic_calculator#readme"
Issues = "https://github.com/connormayer/uci_phonotactic_calculator/issues"

[project.scripts]
ngram-calculator = "uci_phonotactic_calculator.main:main"
uci-phonotactic-calculator = "uci_phonotactic_calculator.main:main"
uci-phonotactic-web = "uci_phonotactic_calculator.web.django.manage:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include all CSV files in src and subpackages
"uci_phonotactic_calculator.data" = ["**/*.csv", "**/*.txt"]
"uci_phonotactic_calculator" = ["py.typed"]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.py$'
exclude = '/(\..+|dist|build|venv)/'

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py38"
# Exclude UI code from strict linting for now
exclude = [
    "src/uci_phonotactic_calculator/web/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["uci_phonotactic_calculator"]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Fix for "Source file found twice under different module names"
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
# Ignore external libraries completely
exclude = ["site-packages"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Ignore missing stubs for external libraries
[[tool.mypy.overrides]]
module = ["pandas.*", "colorama.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bokeh.*"
ignore_missing_imports = true
ignore_errors = true

# Ignore issues in web module (already excluded from linting)
[[tool.mypy.overrides]]
module = "uci_phonotactic_calculator.web.*"
ignore_errors = true
