[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uci-phonotactic-calculator"
version = "0.2.4"
description = "A toolkit for phonotactic probability calculation and analysis."
authors = [
    { name = "Connor Mayer", email = "connor.mayer@uci.edu" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "rich>=13.7",
    "numpy>=1.21",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
ui = [
    "gradio>=3.50.0",
    "setuptools"    # needed for pkg_resources
]
web = [
    "django>=4.2.0",
    "django-crispy-forms>=2.0.0",
    "django-stubs>=5.0.0",
    "django-latexify>=0.3",
    "django-crontab>=0.7"
]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    # Linting / formatting
    "ruff>=0.4.0",
    "black>=23.0.0",
    # Type-checking & stubs
    "mypy>=1.10.0",
    # Build tooling
    "build>=0.10.0"
]

[project.urls]
Homepage = "https://github.com/connormayer/uci_phonotactic_calculator"
Documentation = "https://github.com/connormayer/uci_phonotactic_calculator#readme"
Issues = "https://github.com/connormayer/uci_phonotactic_calculator/issues"

[project.scripts]
ngram-calculator = "uci_phonotactic_calculator:main"
uci-phonotactic-calculator = "uci_phonotactic_calculator:main"
uci-phonotactic-web = "uci_phonotactic_calculator.web.django.manage:main"
uci-phonotactic-ui = "uci_phonotactic_calculator.web.gradio.web_demo_v2:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true 

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include all CSV files in src and subpackages
"uci_phonotactic_calculator.data" = ["**/*.csv", "**/*.txt"]
"uci_phonotactic_calculator" = ["py.typed"]
"uci_phonotactic_calculator.web.django" = [
  "templates/**/*.html",
  "static/**/*.*",
  "media/**/*.*"
]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.py$'
exclude = '/(\..+|dist|build|venv)/'

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py38"
# Exclude UI code from strict linting for now
exclude = [
    "src/uci_phonotactic_calculator/web/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["uci_phonotactic_calculator"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Fix for "Source file found twice under different module names"
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
# Ignore external libraries completely
exclude = ["site-packages"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Ignore missing stubs for external libraries
[[tool.mypy.overrides]]
module = ["pandas.*", "colorama.*"]
ignore_missing_imports = true

# Removed Bokeh override as it's not used in the project

# Ignore issues in web module (already excluded from linting)
[[tool.mypy.overrides]]
module = "uci_phonotactic_calculator.web.*"
ignore_errors = true
